--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.github.ansell</groupId>
+	<groupId>com.github.ansell.csvsum</groupId>
 	<artifactId>csvsum</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>CSVSum</name>
@@ -42,6 +42,10 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>com.github.ansell.jdefaultdict</groupId>
+			<artifactId>jdefaultdict</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-core</artifactId>
 		</dependency>
@@ -57,6 +61,11 @@
 
 	<dependencyManagement>
 		<dependencies>
+			<dependency>
+				<groupId>com.github.ansell.jdefaultdict</groupId>
+				<artifactId>jdefaultdict</artifactId>
+				<version>0.1</version>
+			</dependency>
 			<dependency>
 				<groupId>com.fasterxml.jackson.core</groupId>
 				<artifactId>jackson-core</artifactId>
