--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 	<licenses>
 		<license>
 			<name>Revised BSD License</name>
-			<url>https://raw.github.com/ansell/csvsum/master/LICENCE</url>
+			<url>https://github.com/ansell/csvsum/blob/master/LICENSE</url>
 			<distribution>repo</distribution>
 		</license>
 	</licenses>
