--- a/pom.xml
+++ b/pom.xml
@@ -79,7 +79,7 @@
 		<dependency>
 			<groupId>com.github.jsonld-java</groupId>
 			<artifactId>jsonld-java</artifactId>
-			<version>0.8.1-SNAPSHOT</version>
+			<version>0.8.2</version>
 		</dependency>
 	</dependencies>
 
