--- a/pom.xml
+++ b/pom.xml
@@ -64,22 +64,22 @@
 		<dependency>
 			<groupId>org.codehaus.groovy</groupId>
 			<artifactId>groovy-jsr223</artifactId>
-			<version>2.4.5</version>
 		</dependency>
 		<dependency>
 			<groupId>org.luaj</groupId>
 			<artifactId>luaj-jse</artifactId>
-			<version>3.0.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.jooq</groupId>
 			<artifactId>jool</artifactId>
-			<version>0.9.10</version>
 		</dependency>
 		<dependency>
 			<groupId>com.github.jsonld-java</groupId>
 			<artifactId>jsonld-java</artifactId>
-			<version>0.8.2</version>
+		</dependency>
+		<dependency>
+			<groupId>com.healthmarketscience.jackcess</groupId>
+			<artifactId>jackcess</artifactId>
 		</dependency>
 	</dependencies>
 
@@ -116,6 +116,17 @@
 				<version>4.9</version>
 			</dependency>
 			<dependency>
+				<groupId>com.healthmarketscience.jackcess</groupId>
+				<artifactId>jackcess</artifactId>
+				<version>2.1.3</version>
+				<exclusions>
+					<exclusion>
+						<artifactId>commons-logging</artifactId>
+						<groupId>commons-logging</groupId>
+					</exclusion>
+				</exclusions>
+			</dependency>
+			<dependency>
 				<groupId>junit</groupId>
 				<artifactId>junit</artifactId>
 				<version>${junit.version}</version>
@@ -144,6 +155,26 @@
 				<version>${slf4j.version}</version>
 				<scope>test</scope>
 			</dependency>
+			<dependency>
+				<groupId>org.codehaus.groovy</groupId>
+				<artifactId>groovy-jsr223</artifactId>
+				<version>2.4.5</version>
+			</dependency>
+			<dependency>
+				<groupId>org.luaj</groupId>
+				<artifactId>luaj-jse</artifactId>
+				<version>3.0.1</version>
+			</dependency>
+			<dependency>
+				<groupId>org.jooq</groupId>
+				<artifactId>jool</artifactId>
+				<version>0.9.10</version>
+			</dependency>
+			<dependency>
+				<groupId>com.github.jsonld-java</groupId>
+				<artifactId>jsonld-java</artifactId>
+				<version>0.8.2</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
@@ -169,6 +200,10 @@
 						<program>
 							<mainClass>com.github.ansell.csv.map.CSVMapper</mainClass>
 							<id>csvmap</id>
+						</program>
+						<program>
+							<mainClass>com.github.ansell.csv.access.AccessMapper</mainClass>
+							<id>accessmap</id>
 						</program>
 					</programs>
 				</configuration>
