--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.github.ansell.csv.sum</groupId>
 	<artifactId>csvsum</artifactId>
-	<version>0.0.5</version>
+	<version>0.0.6-SNAPSHOT</version>
 	<name>CSVSum</name>
 	<description>CSV Summariser</description>
 	<packaging>jar</packaging>
