--- a/pom.xml
+++ b/pom.xml
@@ -306,6 +306,10 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
 					<version>2.19.1</version>
+					<configuration>
+						<!-- Travis build workaround, see https://github.com/travis-ci/travis-ci/issues/3396 -->
+						<argLine>-Xmx1024m</argLine>
+					</configuration>
 				</plugin>
 				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
