--- a/pom.xml
+++ b/pom.xml
@@ -303,12 +303,17 @@
 					</executions>
 				</plugin>
 				<plugin>
+					<groupId>org.jacoco</groupId>
+					<artifactId>jacoco-maven-plugin</artifactId>
+					<version>0.7.6.201602180812</version>
+				</plugin>
+				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
 					<version>2.19.1</version>
 					<configuration>
 						<!-- Travis build workaround, see https://github.com/travis-ci/travis-ci/issues/3396 -->
-						<argLine>-Xmx1024m</argLine>
+						<argLine>${argLine} -Xmx1024m</argLine>
 					</configuration>
 				</plugin>
 				<plugin>
@@ -321,11 +326,6 @@
 					<groupId>org.eluder.coveralls</groupId>
 					<artifactId>coveralls-maven-plugin</artifactId>
 					<version>4.1.0</version>
-				</plugin>
-				<plugin>
-					<groupId>org.jacoco</groupId>
-					<artifactId>jacoco-maven-plugin</artifactId>
-					<version>0.7.6.201602180812</version>
 				</plugin>
 				<!--This plugin's configuration is used to store Eclipse m2e settings 
 					only. It has no influence on the Maven build itself. -->
