--- a/pom.xml
+++ b/pom.xml
@@ -202,6 +202,10 @@
 							<id>csvsum</id>
 						</program>
 						<program>
+							<mainClass>com.github.ansell.csv.db.CSVUpload</mainClass>
+							<id>csvupload</id>
+						</program>
+						<program>
 							<mainClass>com.github.ansell.csv.map.CSVMapper</mainClass>
 							<id>csvmap</id>
 						</program>
