--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,10 @@
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-simple</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.derby</groupId>
+			<artifactId>derby</artifactId>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
@@ -177,7 +181,12 @@
 			<dependency>
 				<groupId>com.github.jsonld-java</groupId>
 				<artifactId>jsonld-java</artifactId>
-				<version>0.8.2</version>
+				<version>0.8.3</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.derby</groupId>
+				<artifactId>derby</artifactId>
+				<version>10.12.1.1</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
