--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-		<jackson.version>2.7.5</jackson.version>
+		<jackson.version>2.8.2</jackson.version>
 		<junit.version>4.12</junit.version>
 		<slf4j.version>1.7.21</slf4j.version>
 	</properties>
@@ -98,6 +98,10 @@
 		<dependency>
 			<groupId>com.github.ansell.shp</groupId>
 			<artifactId>utm2wgs</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.github.ansell.csv</groupId>
+			<artifactId>csvstream</artifactId>
 		</dependency>
 	</dependencies>
 
@@ -206,7 +210,12 @@
 			<dependency>
 				<groupId>com.github.ansell.shp</groupId>
 				<artifactId>utm2wgs</artifactId>
-				<version>0.0.1-SNAPSHOT</version>
+				<version>0.0.1</version>
+			</dependency>
+			<dependency>
+				<groupId>com.github.ansell.csv</groupId>
+				<artifactId>csvstream</artifactId>
+				<version>0.0.1</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
