issue #23 : Initial stub for sorter
Signed-off-by: Peter Ansell <p_ansell@yahoo.com>

--- a/pom.xml
+++ b/pom.xml
@@ -217,6 +217,11 @@
 				<artifactId>csvstream</artifactId>
 				<version>0.0.3-SNAPSHOT</version>
 			</dependency>
+			<dependency>
+				<groupId>com.fasterxml.util</groupId>
+				<artifactId>java-merge-sort</artifactId>
+				<version>1.0.1</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
