--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.github.ansell</groupId>
 		<artifactId>parentpom</artifactId>
-		<version>1</version>
+		<version>2-SNAPSHOT</version>
 	</parent>
 
 	<groupId>com.github.ansell.csv.sum</groupId>
@@ -215,7 +215,7 @@
 			<dependency>
 				<groupId>com.github.ansell.shp</groupId>
 				<artifactId>utm2wgs</artifactId>
-				<version>0.0.1</version>
+				<version>0.0.2-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>com.github.ansell.csv</groupId>
