--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.github.ansell</groupId>
 		<artifactId>parentpom</artifactId>
-		<version>2-SNAPSHOT</version>
+		<version>2</version>
 	</parent>
 
 	<groupId>com.github.ansell.csv.sum</groupId>
