--- a/pom.xml
+++ b/pom.xml
@@ -225,7 +225,7 @@
 			<dependency>
 				<groupId>com.fasterxml.util</groupId>
 				<artifactId>java-merge-sort</artifactId>
-				<version>1.0.1</version>
+				<version>1.1.0-SNAPSHOT</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
