Use csvstream release
Signed-off-by: Peter Ansell <p_ansell@yahoo.com>

--- a/pom.xml
+++ b/pom.xml
@@ -220,7 +220,7 @@
 			<dependency>
 				<groupId>com.github.ansell.csv</groupId>
 				<artifactId>csvstream</artifactId>
-				<version>0.0.3-SNAPSHOT</version>
+				<version>0.0.3</version>
 			</dependency>
 			<dependency>
 				<groupId>com.fasterxml.util</groupId>
