Use utm2wgs release
Signed-off-by: Peter Ansell <p_ansell@yahoo.com>

--- a/pom.xml
+++ b/pom.xml
@@ -215,7 +215,7 @@
 			<dependency>
 				<groupId>com.github.ansell.shp</groupId>
 				<artifactId>utm2wgs</artifactId>
-				<version>0.0.2-SNAPSHOT</version>
+				<version>0.0.2</version>
 			</dependency>
 			<dependency>
 				<groupId>com.github.ansell.csv</groupId>
