--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
 	<groupId>com.github.ansell.csv.sum</groupId>
 	<artifactId>csvsum</artifactId>
-	<version>0.5.0</version>
+	<version>0.5.1-SNAPSHOT</version>
 	<name>CSVSum</name>
 	<description>CSV Summariser</description>
 	<packaging>jar</packaging>
