--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
 	</developers>
 
 	<properties>
-		<jackson.version>2.9.0</jackson.version>
+		<jackson.version>2.9.1</jackson.version>
 		<junit.version>4.12</junit.version>
 		<slf4j.version>1.7.25</slf4j.version>
 	</properties>
@@ -116,6 +116,13 @@
 				<groupId>com.github.ansell.jdefaultdict</groupId>
 				<artifactId>jdefaultdict</artifactId>
 				<version>0.1</version>
+			</dependency>
+			<dependency>
+				<groupId>com.fasterxml.jackson</groupId>
+				<artifactId>jackson-bom</artifactId>
+				<version>${jackson.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
 			</dependency>
 			<dependency>
 				<groupId>com.fasterxml.jackson.core</groupId>
@@ -200,7 +207,7 @@
 			<dependency>
 				<groupId>com.github.jsonld-java</groupId>
 				<artifactId>jsonld-java</artifactId>
-				<version>0.10.0</version>
+				<version>0.11.1</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.derby</groupId>
