--- a/pom.xml
+++ b/pom.xml
@@ -227,7 +227,7 @@
 			<dependency>
 				<groupId>com.github.ansell.csv</groupId>
 				<artifactId>csvstream</artifactId>
-				<version>0.0.4</version>
+				<version>0.0.5-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>com.fasterxml.util</groupId>
