issue #27 : Start on testing for JSONMapper
Signed-off-by: Peter Ansell <p_ansell@yahoo.com>

--- a/pom.xml
+++ b/pom.xml
@@ -292,6 +292,10 @@
 							<id>csvmap</id>
 						</program>
 						<program>
+							<mainClass>com.github.ansell.csv.map.JSONMapper</mainClass>
+							<id>jsonmap</id>
+						</program>
+						<program>
 							<mainClass>com.github.ansell.csv.join.CSVJoiner</mainClass>
 							<id>csvmerge</id>
 						</program>
