Add jsonpretty utility
Streaming JSON pretty printer to de-obfuscate JSON documents that have had whitespace removed for the perception of a smaller file

Signed-off-by: Peter Ansell <p_ansell@yahoo.com>

--- a/pom.xml
+++ b/pom.xml
@@ -307,6 +307,10 @@
 							<mainClass>com.github.ansell.csv.access.AccessMapper</mainClass>
 							<id>accessmap</id>
 						</program>
+						<program>
+							<mainClass>com.github.ansell.csv.util.JSONPrettyPrinter</mainClass>
+							<id>jsonpretty</id>
+						</program>
 					</programs>
 				</configuration>
 			</plugin>
