--- a/pom.xml
+++ b/pom.xml
@@ -152,7 +152,7 @@
 			<dependency>
 				<groupId>com.healthmarketscience.jackcess</groupId>
 				<artifactId>jackcess</artifactId>
-				<version>2.1.6</version>
+				<version>2.1.10</version>
 				<exclusions>
 					<exclusion>
 						<artifactId>commons-logging</artifactId>
@@ -192,7 +192,7 @@
 			<dependency>
 				<groupId>org.codehaus.groovy</groupId>
 				<artifactId>groovy-jsr223</artifactId>
-				<version>2.4.10</version>
+				<version>2.4.13</version>
 			</dependency>
 			<dependency>
 				<groupId>org.luaj</groupId>
@@ -212,12 +212,12 @@
 			<dependency>
 				<groupId>org.apache.derby</groupId>
 				<artifactId>derby</artifactId>
-				<version>10.13.1.1</version>
+				<version>10.14.1.0</version>
 			</dependency>
 			<dependency>
 				<groupId>org.postgresql</groupId>
 				<artifactId>postgresql</artifactId>
-				<version>42.0.0</version>
+				<version>42.2.0</version>
 			</dependency>
 			<dependency>
 				<groupId>com.github.ansell.shp</groupId>
@@ -241,7 +241,7 @@
 		<repository>
 			<id>maven2-repository.dev.java.net</id>
 			<name>Java.net repository</name>
-			<url>http://download.java.net/maven/2</url>
+			<url>https://download.java.net/maven/2</url>
 		</repository>
 		<repository>
 			<id>osgeo</id>
