--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
 	</developers>
 
 	<properties>
-		<jackson.version>2.9.3</jackson.version>
+		<jackson.version>2.9.6</jackson.version>
 		<junit.version>4.12</junit.version>
 		<slf4j.version>1.7.25</slf4j.version>
 	</properties>
@@ -227,7 +227,7 @@
 			<dependency>
 				<groupId>com.github.ansell.csv</groupId>
 				<artifactId>csvstream</artifactId>
-				<version>0.0.5</version>
+				<version>0.0.6-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>com.fasterxml.util</groupId>
