--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.github.ansell</groupId>
 		<artifactId>parentpom</artifactId>
-		<version>9</version>
+		<version>10</version>
 	</parent>
 
 	<groupId>com.github.ansell.csv.sum</groupId>
@@ -241,7 +241,7 @@
 		<repository>
 			<id>maven2-repository.dev.java.net</id>
 			<name>Java.net repository</name>
-			<url>https://download.java.net/maven/2</url>
+			<url>https://maven.java.net/content/groups/public/</url>
 		</repository>
 		<repository>
 			<id>osgeo</id>
