--- a/pom.xml
+++ b/pom.xml
@@ -36,8 +36,7 @@
 	</developers>
 
 	<properties>
-		<jacksondatabind.version>2.9.9.2</jacksondatabind.version>
-		<jackson.version>2.9.9</jackson.version>
+		<jackson.version>2.10.0</jackson.version>
 		<junit.version>4.12</junit.version>
 		<slf4j.version>1.7.25</slf4j.version>
 	</properties>
@@ -129,7 +128,7 @@
 			<dependency>
 				<groupId>com.fasterxml.jackson.core</groupId>
 				<artifactId>jackson-databind</artifactId>
-				<version>${jacksondatabind.version}</version>
+				<version>${jackson.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>com.fasterxml.jackson.core</groupId>
@@ -193,7 +192,7 @@
 			<dependency>
 				<groupId>com.github.jsonld-java</groupId>
 				<artifactId>jsonld-java</artifactId>
-				<version>0.12.1</version>
+				<version>0.13.0-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.derby</groupId>
