--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.github.ansell</groupId>
 		<artifactId>parentpom</artifactId>
-		<version>13</version>
+		<version>14</version>
 	</parent>
 
 	<groupId>com.github.ansell.csv.sum</groupId>
@@ -36,9 +36,9 @@
 	</developers>
 
 	<properties>
-		<jackson.version>2.10.0</jackson.version>
-		<junit.version>4.12</junit.version>
-		<slf4j.version>1.7.25</slf4j.version>
+		<jackson.version>2.11.0</jackson.version>
+		<junit.version>4.13</junit.version>
+		<slf4j.version>1.7.30</slf4j.version>
 	</properties>
 
 	<dependencies>
@@ -111,7 +111,7 @@
 			<dependency>
 				<groupId>com.github.ansell.jdefaultdict</groupId>
 				<artifactId>jdefaultdict</artifactId>
-				<version>0.1</version>
+				<version>0.2-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>com.fasterxml.jackson</groupId>
@@ -192,7 +192,7 @@
 			<dependency>
 				<groupId>com.github.jsonld-java</groupId>
 				<artifactId>jsonld-java</artifactId>
-				<version>0.13.0-SNAPSHOT</version>
+				<version>0.13.0</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.derby</groupId>
@@ -231,7 +231,7 @@
 		<repository>
 			<id>osgeo</id>
 			<name>Open Source Geospatial Foundation Repository</name>
-			<url>https://download.osgeo.org/webdav/geotools/</url>
+			<url>https://repo.osgeo.org/repository/release/</url>
 		</repository>
 	</repositories>
 
