Add nashorn dependency
Signed-off-by: Peter Ansell <p_ansell@yahoo.com>

--- a/pom.xml
+++ b/pom.xml
@@ -185,6 +185,11 @@
 				<version>3.0.1</version>
 			</dependency>
 			<dependency>
+				<groupId>org.openjdk.nashorn</groupId>
+				<artifactId>nashorn-core</artifactId>
+				<version>15.0</version>
+			</dependency>
+			<dependency>
 				<groupId>org.jooq</groupId>
 				<artifactId>jool-java-8</artifactId>
 				<version>0.9.14</version>
