--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,9 @@
 language: java
 jdk:
-  - openjdk8
-  - openjdk11
-  - openjdk12
+  - openjdk15
 notifications:
   email:
     - ansell.peter@gmail.com
 after_success:
-  - mvn clean test jacoco:report coveralls:report
+  - mvn clean test jacoco:report
+  - bash <(curl -s https://codecov.io/bash)
