--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
@@ -36,10 +37,12 @@
 	</developers>
 
 	<properties>
-		<jackson.version>2.11.3</jackson.version>
+		<jackson.version>2.12.0</jackson.version>
 		<junit.version>4.13.1</junit.version>
 		<slf4j.version>1.7.30</slf4j.version>
 		<jdkLevel>15</jdkLevel>
+		<maven-surefire-plugin.version>3.0.0-M3</maven-surefire-plugin.version>
+		<maven-failsafe-plugin.version>3.0.0-M3</maven-failsafe-plugin.version>
 	</properties>
 
 	<dependencies>
@@ -70,6 +73,11 @@
 		<dependency>
 			<groupId>org.luaj</groupId>
 			<artifactId>luaj-jse</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.openjdk.nashorn</groupId>
+			<artifactId>nashorn-core</artifactId>
+			<scope>runtime</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.jooq</groupId>
@@ -178,7 +186,7 @@
 			<dependency>
 				<groupId>org.codehaus.groovy</groupId>
 				<artifactId>groovy-jsr223</artifactId>
-				<version>2.5.2</version>
+				<version>3.0.7</version>
 			</dependency>
 			<dependency>
 				<groupId>org.luaj</groupId>
@@ -188,7 +196,7 @@
 			<dependency>
 				<groupId>org.openjdk.nashorn</groupId>
 				<artifactId>nashorn-core</artifactId>
-				<version>15.0</version>
+				<version>15.1</version>
 			</dependency>
 			<dependency>
 				<groupId>org.jooq</groupId>
@@ -198,17 +206,17 @@
 			<dependency>
 				<groupId>com.github.jsonld-java</groupId>
 				<artifactId>jsonld-java</artifactId>
-				<version>0.13.0</version>
+				<version>0.13.2</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.derby</groupId>
 				<artifactId>derby</artifactId>
-				<version>10.14.2.0</version>
+				<version>10.15.2.0</version>
 			</dependency>
 			<dependency>
 				<groupId>org.postgresql</groupId>
 				<artifactId>postgresql</artifactId>
-				<version>42.2.5</version>
+				<version>42.2.18</version>
 			</dependency>
 			<dependency>
 				<groupId>com.github.ansell.shp</groupId>
@@ -223,7 +231,7 @@
 			<dependency>
 				<groupId>com.fasterxml.util</groupId>
 				<artifactId>java-merge-sort</artifactId>
-				<version>1.0.1</version>
+				<version>1.0.2</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
